# refuel-arm

./: .gitignore  README.md  README_REFUEL_PROJECT.md  SAFE_DEV_RULES.md  SETUP.md  analyze_pipeline.py  check_fk.py  instructions.md  kaggle_train_ikflow.py  refuel-stomp.py  self_contribution_audit.md  stomp_collision.py  stomp_planner.py  test_fk_height.py  test_fk_height2.py  test_full_pipeline.py  test_full_stomp_mission.py  test_ik_geo_pipeline.py  test_ik_line.py  test_ik_mobius.py  test_ik_pringle.py  test_ik_reachable.py  test_ik_real.py  test_ik_wave.py  test_up.py  test_up2.py
cppflow/: package.xml
cppflow/cppflow/problems/: kuka_kr6__refuel_line.yaml
deprecated/: README.md  check_fk.py  test_fk_sweep.py  test_heights.py  test_ik.py  test_ik_geo_pipeline.py  test_ik_local.py  test_ik_reachable.py  test_ik_yellow.py
deprecated/ikflow/ikflow/training/: lt_model.py
deprecated/kaggle/: README.py  train_all.py
deprecated/matlab/: kr6_r700_2.urdf  kr6_r700_2_clean.urdf
deprecated/matlab/robot_examples/: KR6_R700_urdf_to_poe.m
ik_trajectories/: analyze_ik_accuracy.py  analyze_pringle_accuracy.py  analyze_single_pose.py  compare_cspace_workspace.py  test_ik_line.py  test_ik_mobius.py  test_ik_pringle.py  test_ik_wave.py  test_joint_line.py
ikflow/: .gitkeep
kaggle/: cell_2_register_robot.py  cell_3_generate_dataset.py  cell_4_train.py  train_all.py
kuka_refuel_ws/src/kuka_kr6_gazebo/: CMakeLists.txt  package.xml
kuka_refuel_ws/src/kuka_kr6_gazebo/config/: controllers.yaml  kuka_rviz.rviz
kuka_refuel_ws/src/kuka_kr6_gazebo/launch/: gazebo.launch  refuel_sim.launch.py  rviz.launch
kuka_refuel_ws/src/kuka_kr6_gazebo/scripts/: ik_geometric.py
kuka_refuel_ws/src/kuka_kr6_gazebo/urdf/: kr6_r700.gazebo.xacro  kr6_r700_2_clean.urdf
kuka_refuel_ws/src/kuka_kr6_gazebo/worlds/: refuel_world.world
matlab/: solve_specific_pose.m  test_user_pose.m
matlab/+hardcoded_IK/: KR6_R700.m
matlab/+hardcoded_IK_setups/: KR6_R700.m
matlab/robot_examples/: KR6_R700.m  KR6_R700_simulink.m  test.m
report/: trajectory_analysis_report.tex
ros2_docker_ws/: Dockerfile
ros2_docker_ws/kuka_ws/src/kuka_kr6_gazebo/: package.xml
ros2_docker_ws/kuka_ws/src/kuka_kr6_gazebo/config/: ros2_controllers.yaml
ros2_docker_ws/kuka_ws/src/kuka_kr6_gazebo/scripts/: refuel_mission_commander.py
ros2_docker_ws/scripts/: build.sh
ros2_docker_ws/ur5_ws/install/: local_setup.sh  setup.sh
ros2_docker_ws/ur5_ws/install/ur5_kdl_ik/lib/ur5_kdl_ik/: ur5_kdl_ik_baseline
ros2_docker_ws/ur5_ws/install/ur5_kdl_ik/share/ur5_kdl_ik/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_docker_ws/ur5_ws/install/ur5_kdl_ik/share/ur5_kdl_ik/cmake/: ur5_kdl_ikConfig-version.cmake  ur5_kdl_ikConfig.cmake
ros2_docker_ws/ur5_ws/install/ur5_kdl_ik/share/ur5_kdl_ik/environment/: ament_prefix_path.dsv  path.dsv
ros2_docker_ws/ur5_ws/install/ur5_kdl_ik/share/ur5_kdl_ik/launch/: run_ik_baseline.launch.py
ros2_docker_ws/ur5_ws/install/ur5_minimal_moveit/lib/ur5_minimal_moveit/: fake_joint_trajectory_controller
ros2_docker_ws/ur5_ws/install/ur5_minimal_moveit/share/ur5_minimal_moveit/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_docker_ws/ur5_ws/install/ur5_minimal_moveit/share/ur5_minimal_moveit/launch/: ur5_moveit_minimal.launch.py
ros2_docker_ws/ur5_ws/install/ur5_motion_planning/lib/ur5_motion_planning/: ur5_plan_and_analyze_node
ros2_docker_ws/ur5_ws/install/ur5_motion_planning/share/ur5_motion_planning/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_docker_ws/ur5_ws/install/ur5_motion_planning/share/ur5_motion_planning/cmake/: ur5_motion_planningConfig-version.cmake  ur5_motion_planningConfig.cmake
ros2_docker_ws/ur5_ws/install/ur5_motion_planning/share/ur5_motion_planning/environment/: ament_prefix_path.dsv  path.dsv
ros2_docker_ws/ur5_ws/install/ur5_motion_planning/share/ur5_motion_planning/launch/: run_plan_and_analyze.launch.py  run_plan_and_analyze_real_controllers_sim.launch.py
ros2_docker_ws/ur5_ws/install/ur_controllers/share/ur_controllers/: package.dsv  package.ps1  package.sh
ros2_docker_ws/ur5_ws/install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_docker_ws/ur5_ws/install/ur_dashboard_msgs/share/ur_dashboard_msgs/action/: SetMode.action  SetMode.idl
ros2_docker_ws/ur5_ws/install/ur_dashboard_msgs/share/ur_dashboard_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ur_dashboard_msgs__rosidl_generator_pyExport.cmake  (+5 more)
ros2_docker_ws/ur5_ws/install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_docker_ws/ur5_ws/install/ur_moveit_config/share/ur_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_docker_ws/ur5_ws/log/: latest_build
ros2_docker_ws/ur5_ws/src/ur5_kdl_ik/: CMakeLists.txt  README.md  package.xml
ros2_docker_ws/ur5_ws/src/ur5_kdl_ik/launch/: run_ik_baseline.launch.py
ros2_docker_ws/ur5_ws/src/ur5_kdl_ik/src/: ur5_kdl_ik_node.cpp
ros2_docker_ws/ur5_ws/src/ur5_minimal_moveit/: BUILD_AND_LAUNCH.md  package.xml  setup.cfg  setup.py
ros2_docker_ws/ur5_ws/src/ur5_minimal_moveit/launch/: ur5_moveit_minimal.launch.py
ros2_docker_ws/ur5_ws/src/ur5_minimal_moveit/ur5_minimal_moveit/: fake_joint_trajectory_controller.py
ros2_docker_ws/ur5_ws/src/ur5_motion_planning/: CMakeLists.txt  README.md
ros2_docker_ws/ur5_ws/src/ur5_motion_planning/launch/: run_plan_and_analyze.launch.py  run_plan_and_analyze_real_controllers_sim.launch.py
ros2_docker_ws/ur5_ws/src/ur5_motion_planning/src/: ur5_plan_and_analyze_node.cpp
(+529 files in other folders)
